--- a/client/src/style2/index.scss
+++ b/client/src/style2/index.scss
@@ -188,8 +188,9 @@ a {
   margin: 10px;
 
     .admin_navig_items {
-      margin: 30px;
-
+      display: flex;
+      justify-content: center;
+      
       .navig_login {
 
       }
@@ -225,7 +226,7 @@ a {
 }
 
 
-.login {
+.login, .register {
   display: flex;
   flex-direction: column;
   align-items: center;
